Fix media responsiveness on mobile

--- a/portfolio_site/responsive.css
+++ b/portfolio_site/responsive.css
@@ -1,7 +1,12 @@
 /* @media only screen and (orientation: landscape) */
 
-@media only screen and (max-width: 600px)
+@media only screen and (max-width: 480px)
 {
+
+    .new_media
+    {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 1000px)
@@ -25,7 +30,7 @@
     {
         width: 340px;
     }
-    
+
     .new_strip_box
     {
         width: 100%;
